Fixed hidden menu toggle on Safari
I think?

--- a/src/style.less
+++ b/src/style.less
@@ -47,43 +47,49 @@ html, body {
 		z-index: 9;
 		font-size: .5em;
 		opacity: 1;
-    	overflow-x: scroll;
     	height: 100%;
-    	padding: 20px 40px 60px 20px;
-    	display: flex;
-  		align-items: center;
-  		justify-content: center;
 
-		#menu-toggle {display: none;}
+    	#menu-toggle {display: none;}
+    	
+    	.nav-container {
+    		overflow-x: scroll;
+	    	display: flex;
+	  		align-items: left;
+  			justify-content: center;
+  			flex-direction: column;
+  			height: 100%;
+  			padding: 20px 40px 60px 20px;
 
-    	i {font-size: 1.8em;}
+  			i {font-size: 1.8em;}
 
-		ul {
-			list-style-type: none;
-			padding: 0 0 0 10px;
-			padding-inline-start: 10px;
-		}
+			ul {
+				list-style-type: none;
+				padding: 0 0 0 10px;
+				padding-inline-start: 10px;
+			}
 
-		p, h3 {
-			display: inline-block;
-			margin: 2px;
-			opacity: .1;
-			letter-spacing: -2px;
-			transition: letter-spacing 0.1s ease-out;
-			color: transparent;
-			background-image: url('../assets/generic/nav-hidden.png');
-			background-repeat: repeat-x;
-			background-position: center center;
-			background-size: 10px;
+			p, h3 {
+				display: inline-block;
+				width: fit-content;
+				margin: 2px;
+				opacity: .1;
+				letter-spacing: -2px;
+				transition: letter-spacing 0.1s ease-out;
+				color: transparent;
+				background-image: url('../assets/generic/nav-hidden.png');
+				background-repeat: repeat-x;
+				background-position: center center;
+				background-size: 10px;
 
-			a {color: transparent;}
-		}
+				a {color: transparent;}
+			}
 
-		h3 {
-			font-size: 1.4em;
-			margin: 16px 2px 2px 2px;
-		}
-		
+			h3 {
+				font-size: 1.4em;
+				margin: 16px 2px 2px 2px;
+			}
+    	}
+			
 		@media (min-width: 1023px) {
 			&:hover {	
 
@@ -112,7 +118,9 @@ html, body {
 
 		@media (max-width: 1023px) {
 
-			display: block;
+			.nav-container {
+				display: block;
+			}
 
 			#menu-toggle {
 				display: block;
@@ -541,19 +549,7 @@ footer {
 			}
 		}
 	}
-
-	
 }
-
-/*
-@keyframes rainbow {
-  0%  {color: #0597D5;}
-  20% {color: #42DA43;}
-  40% {color: #EDD803;}
-  60% {color: #FEA706;}
-  80% {color: #EA2F83;}
-  100%{color: #0597D5;}
-}*/
 
 // value & room for improvement lists
 
